# DonCEyKongJr

./: .gitignore  ARQUITECTURA_SERVIDOR_RESUMEN.md  BUGS_CORREGIDOS.md  BUILD_MENU.bat  COMPILAR_CLIENTE.bat  INICIAR.bat  INSTRUCCIONES_SIMPLES.md  JUGAR.bat  JUGAR.hta  MODERNIZACION.md  README.md  REINICIAR-JUEGO.bat  VERSIONES.md  check-versions.bat  compilar_todo.bat
.claude/: settings.local.json
.github/workflows/: build.yml
cliente-c/: CMakeLists.txt  README.md
cliente-c/sprites/: NOMBRES-ALTERNATIVOS.md  README.md
cliente-c/src/: cliente_prueba.c  constants.h  debug-json.bat  game.c  game.h  iniciar-cliente-completo.bat  iniciar-cliente.bat  input.c  input.h  log_utils.h  main.c  network.c  network.h  render.c  render.h  sprites.c  sprites.h  structs.h  test_json_debug.c
servidor-java/: .gitignore  README_EJECUCION.md  build.gradle  gradle.properties  gradlew.bat  iniciar-servidor.bat  settings.gradle.kts
servidor-java/src/main/java/cr/tec/donceykongjr/server/: Main.java
servidor-java/src/main/java/cr/tec/donceykongjr/server/cli/: ConsolaAdmin.java
servidor-java/src/main/java/cr/tec/donceykongjr/server/gui/: AdminGUI.java
servidor-java/src/main/java/cr/tec/donceykongjr/server/logic/: EjemploMotorCocodrilos.java  GameLoop.java  GameManager.java  MotorCocodrilos.java  TelemetriaCocodrilos.java
servidor-java/src/main/java/cr/tec/donceykongjr/server/logic/entidades/: Cocodrilo.java  CocodriloAzul.java  CocodriloRojo.java  DireccionJugador.java  Entidad.java  EstadoCocodrilo.java  EstadoJugador.java  Fruta.java  Jugador.java  Liana.java  Mario.java  SnapshotCocodrilo.java  SnapshotJugador.java  SnapshotSistemaCocodrilos.java
servidor-java/src/main/java/cr/tec/donceykongjr/server/logic/eventos/: EventoJuego.java
servidor-java/src/main/java/cr/tec/donceykongjr/server/logic/patrones/: FactoryEntidad.java  Observer.java  Subject.java
servidor-java/src/main/java/cr/tec/donceykongjr/server/network/: JsonUtil.java  ManejadorCliente.java  Mensaje.java  ServidorJuego.java
servidor-java/src/main/java/cr/tec/donceykongjr/server/util/: Config.java  LoggerUtil.java
